fix sidebar game search input alignment

--- a/css/library.css
+++ b/css/library.css
@@ -1926,6 +1926,7 @@ body:not(.WindowFocus) ._32TmRVFkc8HMIUZ-KnnKby._3E5iVG630BkOHTaJJaMEMw::after {
 
 ._20QAC4WMXm8qFE8waUT5oo ._12vo5L1hsNGdao6_ssuirS .DialogInput_Wrapper > input.DialogInput {
   min-width: 100% !important;
+  padding: 0 16px !important;
 }
 
 ._20QAC4WMXm8qFE8waUT5oo ._12vo5L1hsNGdao6_ssuirS .DialogInput_Wrapper {
